[package]
name = "tiyt"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

# [[bin]]
# name = "api"
# path = "src/api.rs"

# [[bin]]
# name = "process"
# path = "src/process.rs"
